# gemini-mcp

./: README.md  mcp.json  pyproject.toml  requirements.txt
src/: gemini.py
tests/: test_gemini.py
